--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/site.webmanifest" />
+    <link rel="preload" as="video" href="src/assets/Exterior Animation R1.mp4" type="video/mp4">
   </head>
 
   <body>
